tests/horn-smt2/pos/str00.smt2
(fixpoint  "--eliminate=horn")
 
 
 
 
 
 
(constraint
   (and
      (forall ((x (Str)) ((==  x  "cat")))
         (forall ((y (Str)) ((==  y  "dog")))
            (and
               ((==  x  "cat"))
               ((==  y  "dog")))))))